<resources>
    <string name="app_name">RankingU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_error">Error</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_rankingtons">Rankingtons</string>
    <string name="menu_help">Help</string>
    <string name="menu_suggestions">Suggestions</string>
    <string name="menu_settings">Settings</string>

    <string name="facebook_app_id">190467239257312</string>
    <string name="fb_login_protocol_scheme">fb190467239257312</string>

    <string name="Ajust">Ajustes</string>
    <string name="BotonVolver">Volver</string>
    <string name="BotonEliminar_cuenta">Eliminar Cuenta </string>
    <string name="BotonCambiar_Contra">Cambiar contraseÃ±a </string>
    <string name="Text_ingrese">Ingrese nueva contraseÃ±a </string>
    <string name="Text_confirm">Confirme la nueva contraseÃ±a </string>
    <string name="Text_Editarcorreo">Editar Correo </string>
    <string name="Text_ingresecorreo">Ingrese el Nuevo correo ElectrÃ³nico </string>
    <string name="Text_confirmecorreo">Confirme el Nuevo correo ElectrÃ³nico </string>
    <string name="Text_confirm2">Confirmar </string>
    <string name="BotonCerrarsecion">Cerrar sesiÃ³n </string>

    <string name="Ajustes">Ajustes</string>

    <string name="Facebook">Facebook</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="confirmar_pasw">Confirmar contraseña</string>
    <string name="action_sign_in">Iniciar sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="crearC"><u>Crea tu cuenta!</u></string>
    <string name="olvidarC"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="Materia">Materia: </string>
    <string name="Crear">Crear</string>
    <string name="Correo">Correo</string>
    <string name="Semestre">Semestre</string>
    <string name="Nombre">Nombre</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Apellido">Apellido</string>
    <string name="Carrera">Carrera</string>
    <string name="Comentario">Comentario:</string>

    <string name="Asignatura">Asignatura</string>

    <string name="inicia_sesion"><u>Inicia sesion</u></string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="crea_cuenta"><u>Crea tu cuenta!</u></string>
    <string name="usuario">Usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="Mantener_sesion">Mantener sesion</string>
    <string name="password_olvidada"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="iniciar">iniciar</string>
    <string name="crear_usuario"><u>Crear Usuario</u></string>
    <string name="correo_placeholder">example@javeriana.edu.co</string>
    <string name="correo">Correo:</string>
    <string name="nomrbe_de_usuario">Nombre de usuario</string>
    <string name="Confirmar_contraseña">Confirmar contraseña</string>
    <string name="password_placeholder">*********</string>
    <string name="soy_un">Soy un...</string>
    <string name="Estudiante">Estudiante</string>
    <string name="Profesor">Profesor</string>
    <string name="Continuar">Continuar</string>
    <string name="Datos_personales"><u>Datos personales</u></string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="Politicas_privacidad">Acepto las politicas de privacidad</string>
    <string name="add_materia"><u>Añadir materias</u></string>
    <string name="Nombre_materia">Nombre de la  materiaS</string>
    <string name="Agregar">Agregar materiaS</string>
    <string name="success_add_materia">Profe, La materiaS se agrego correctamente!</string>
    <string name="add_otra_materia">Agregar otra materiaS</string>
    <string name="Saltar">Saltar por ahora</string>
    
    <string-array name="lista_profesores">
        <item>Anabel Montero</item>
        <item>Leonardo Florez</item>
        <item>Julio Carreno</item>
        <item>Camilo Canon</item>
    </string-array>

    <string-array name="lista_materias">
        <item>ADOO</item>
        <item>POO</item>
        <item>Intro Compu Grafica</item>
        <item>Ingesoft</item>
    </string-array>

    <string-array name="lista_materias_carrera">
        <item>Anabel Montero</item>
        <item>Leonardo Florez</item>
        <item>Julio Carreno</item>
        <item>Camilo Canon</item>
    </string-array>

    <!--HORARIO DIAS-->
    <string name="hora">hora</string>
    <string name="lunes">LUNES</string>
    <string name="martes">MARTES</string>
    <string name="miercoles">MIERCOLES</string>
    <string name="jueves">JUEVES</string>
    <string name="viernes">VIERNES</string>
    <string name="sabado">SABADO</string>
    <string name="domingo">DOMINGO</string>
    <!--HORARIO HORAS-->
    <string name="siete_am">7:00</string>
    <string name="ocho_am">8:00</string>
    <string name="nueve_am">9:00</string>
    <string name="diez_am">10:00</string>
    <string name="once_am">11:00</string>
    <string name="doce_pm">12:00</string>
    <string name="una_pm">13:00</string>
    <string name="dos_pm">14:00</string>
    <string name="tres_pm">15:00</string>
    <string name="cuatro_pm">16:00</string>
    <string name="cinco_pm">17:00</string>
    <string name="seis_pm">18:00</string>
    <string name="siete_pm">19:00</string>
    <string name="ocho_pm">20:00</string>
    <string name="nueve_pm">21:00</string>
    <string name="diez_pm">22:00</string>

    <string name="SuggestionsTitle">Sugerencia</string>
    <string name="ErrorTitle">Reportar error</string>
    <string name="textSuggestion">Comentanos tus sugerencias</string>
    <string name="textError">Comentanos tu error</string>
    <string name="send">Enviar</string>




</resources>
