<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUp.SignUp_Estudiante">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="56dp"
        android:text="@string/Datos_personales"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nombre"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/apellido"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextNombre"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/apellido"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Carrera"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextApellido"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellido" />

    <Spinner
        android:id="@+id/spinnerCarrera"
        android:layout_width="215dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextApellido"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Semestre"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/spinnerCarrera"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCarrera" />

    <Spinner
        android:id="@+id/spinnerSemestre"
        android:layout_width="217dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCarrera"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <CheckBox
        android:id="@+id/checkBoxPolicies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Politicas_privacidad"
        app:layout_constraintEnd_toEndOf="@+id/spinnerSemestre"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="@+id/spinnerSemestre"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSemestre" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Continuar"
        app:layout_constraintEnd_toEndOf="@+id/spinnerSemestre"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/spinnerSemestre"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPolicies" />
</androidx.constraintlayout.widget.ConstraintLayout>